--- a/index.html
+++ b/index.html
@@ -34,11 +34,25 @@
                 <h4>What's Steeping at The Tea Cozy?</h4> 
                 <!-- item container -->
                 <div class="itemcontainer">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
+                    <div class="item">
+                        <img src="resources/images/img-berryblitz.jpg" alt="berryblitz" class="itempic">
+                        <span>Fall Berry Blitz Tea</span>
+                    </div>
+                    <div class="item">
+                        <img src="resources/images/img-spiced-rum.jpg" alt="spiced rum" class="itempic">
+                        <span>Spiced Rum Tea</span></div>
+                    <div class="item">
+                        <img src="resources/images/img-donut.jpg" alt="donut" class="itempic">
+                        <span>Seasonal Donuts</span>
+                    </div>
+                    <div class="item">
+                        <img src="resources/images/img-myrtle-ave.jpg" alt="myrtle ave" class="itempic">
+                        <span>Myrtle Ave Tea</span>
+                    </div>
+                    <div class="item">
+                        <img src="resources/images/img-bedford-bizarre.jpg" alt="bedford bizarre" class="itempic">
+                        <span>Bedford Bizarre Tea</span>
+                    </div>
                 </div>                  
             </div>
             <!-- locations -->
@@ -46,22 +60,22 @@
                 <h2>Locations</h2>
                 <div class="locationcontainer">
                     <!-- Downtown -->
-                    <div class="downtown">
-                        <h5>Downtown</h5>
+                    <div class="location">
+                        <h3>Downtown</h3>
                         <p>384 West 4th St</p>
                         <p>Suite 108</p>
                         <p>Portland, Maine</p>
                     </div>
                     <!-- East Bayside -->
-                    <div class="eastbayside">
-                        <h5>East Bayside</h5>
+                    <div class="location">
+                        <h3>East Bayside</h3>
                         <p>3433 Phisherman's Avenue</p>
                         <p>(Northwest Corner)</p>
                         <p>Portland, Maine</p>
                     </div>
                     <!-- Oakdale -->
-                    <div class="oakdale">
-                        <h5>Oakdale</h5>
+                    <div class="location">
+                        <h3>Oakdale</h3>
                         <p>515 Crescent Avenue</p>
                         <p>Second Floor</p>
                         <p>Portland, Maine</p>
